examples/10-argocd/rendered-dir/argocd-notifications/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-notifications-controller
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-notifications-controller
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: notifications-controller
    app.kubernetes.io/managed-by: ktpl
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.3
  annotations:
    ktpl.io/rendered: '{"metadata.labels[''app.kubernetes.io/version'']":1,"spec.template.metadata.annotations.checksum/cmd-params":2,"spec.template.metadata.labels[''app.kubernetes.io/version'']":1,"spec.template.spec.containers[0].image":2,"spec.template.spec.containers[0].imagePullPolicy":1}'
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-notifications-controller
      app.kubernetes.io/instance: argocd
  template:
    metadata:
      annotations:
        checksum/cmd-params: db68b8d9b50dfbaaeb3c42bd0c5f7c6956e604d098bdf5d4c81273f86410b458
      labels:
        app.kubernetes.io/name: argocd-notifications-controller
        app.kubernetes.io/instance: argocd
        app.kubernetes.io/component: notifications-controller
        app.kubernetes.io/managed-by: ktpl
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/version: v3.5.3
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: argocd-notifications-controller
      automountServiceAccountToken: true
      containers:
        - name: notifications-controller
          image: quay.io/argoproj/argocd:v3.5.3
          imagePullPolicy: IfNotPresent
          args:
            - /usr/local/bin/argocd-notifications
            - --metrics-port=9001
            - --namespace=argocd
            - --argocd-repo-server=argocd-repo-server:8081
            - --secret-name=argocd-notifications-secret
          ports:
            - name: metrics
              containerPort: 9001
              protocol: TCP
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          workingDir: /app
          volumeMounts:
            - name: tls-certs
              mountPath: /app/config/tls
            - name: argocd-repo-server-tls
              mountPath: /app/config/reposerver/tls
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: argocd-notifications-controller
                topologyKey: kubernetes.io/hostname
      nodeSelector:
        kubernetes.io/os: linux
      volumes:
        - name: tls-certs
          configMap:
            name: argocd-tls-certs-cm
            optional: true
        - name: argocd-repo-server-tls
          secret:
            secretName: argocd-repo-server-tls
            optional: true
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
              - key: ca.crt
                path: ca.crt
      dnsPolicy: ClusterFirst
